--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/faker": "^5.1.5",
+    "babel-jest": "^27.0.6",
     "cors": "^2.8.5",
     "dotenv-webpack": "^6.0.0",
     "file-loader": "^6.2.0",
