--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/express": "^4.17.9",
     "@types/faker": "^5.1.5",
     "babel-jest": "^27.0.6",
